Fix jumping

--- a/app/styles/app/modules/build-header.scss
+++ b/app/styles/app/modules/build-header.scss
@@ -415,7 +415,7 @@
     height: 30px;
     border-radius: 50%;
     position: relative;
-    top: -2px;
+    top: -3px;
     background-color: transparent;
     border: 2px solid $oxide-blue;
 
@@ -443,7 +443,7 @@
 
   .stage-loaded-text {
     position: relative;
-    top: 4px;
+    top: 4.2px;
     font-size: 12px;
     color: $oxide-blue;
   }
